Refactor Capsule handling by introducing DTOs for create and update operations, enhance error handling in CapsuleController, and update CapsuleMapper for better mapping strategies.