@@ -29,7 +29,7 @@ public class RestExceptionHandler {
     @ResponseBody
     public ResponseEntity<ErrorDto> handleValidationExceptions(
             MethodArgumentNotValidException ex) {
-        String errorMessage = ex.getBindingResult().getFieldErrors().get(0).getDefaultMessage();
+        String errorMessage = ex.getBindingResult().getFieldErrors().getFirst().getDefaultMessage();
         return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                 .body(ErrorDto.builder().message(errorMessage).build());
     }
